cudaq/test/Transforms/mapping_disconnected_pair_errors.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// Note - Uses default placement and search strategies, hence fails.
// RUN: cudaq-opt --assign-wire-indices '--qubit-mapping=device=file(%S/mapping_disconnected_pair.txt)' %s -verify-diagnostics

quake.wire_set @wires[2147483647]

// expected-error @+1 {{cannot place two-qubit interaction between virtual qubits 0 and 1 on disconnected device topology}}
func.func @bell_pair() attributes {"cudaq-entrypoint", "cudaq-kernel"} {
  %q0 = quake.null_wire
  %q1 = quake.null_wire
  %0 = quake.h %q0 : (!quake.wire) -> !quake.wire
  %1:2 = quake.x [%0] %q1 : (!quake.wire, !quake.wire) -> (!quake.wire, !quake.wire)
  %m0, %w0 = quake.mz %1#0 : (!quake.wire) -> (!quake.measure, !quake.wire)
  %m1, %w1 = quake.mz %1#1 : (!quake.wire) -> (!quake.measure, !quake.wire)
  quake.sink %w0 : !quake.wire
  quake.sink %w1 : !quake.wire
  return
}
